<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DropboxManagementActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accessTokenTextView"
        android:text="@string/layout_access_token"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accessTokenTextView"
        android:id="@+id/authenticateButton"
        android:text="@string/layout_authenticate"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authenticateButton"
        android:id="@+id/remotePathTextView"
        android:labelFor="@+id/remotePathEditText"
        android:text="@string/layout_remote_path"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remotePathTextView"
        android:inputType="text"
        android:id="@+id/remotePathEditText"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remotePathEditText"
        android:id="@+id/remoteFileNameTextView"
        android:labelFor="@+id/remoteFileNameEditText"
        android:text="@string/layout_remote_file_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remoteFileNameTextView"
        android:inputType="text"
        android:id="@+id/remoteFileNameEditText"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remoteFileNameEditText"
        android:id="@+id/syncButton"
        android:text="@string/layout_sync"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/syncButton"
        android:id="@+id/messageTextView"
        android:singleLine="false"
        android:fontFamily="monospace"
        />


</RelativeLayout>
